--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <nav>
-  <a routerLink="timelines" class="link">Ung dung tinh thoi gian</a>
+  <a routerLink="youtube" class="link">Youtube</a>
 </nav>
 <router-outlet></router-outlet>
