--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <nav>
   <a routerLink="youtube" class="link">Youtube</a>
+  <a routerLink="dictionary" class="link">Dictionary</a>
 </nav>
 <router-outlet></router-outlet>
