--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <nav>
   <a routerLink="youtube" class="link">Youtube</a>
   <a routerLink="dictionary" class="link">Dictionary</a>
+  <a routerLink="todo" class="link">Todo</a>
 </nav>
 <router-outlet></router-outlet>
